# core

./: ARCHITECTURE.md  Cargo.toml  PHILOSOPHY.md  README.md  justfile
.cursor/rules/: architecture.mdc  code-style.mdc  documentation.mdc  testing.mdc
.github/workflows/: ci.yml
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  executor.rs  lib.rs  main.rs  metadata.rs  workflow.rs
crates/engine/src/engine/: context.rs  function_name.rs  interface_name.rs  source.rs
crates/engine/src/metadata/: to_json_schema.rs
crates/engine/src/workflow/: edge.rs  node.rs
crates/file-source/: Cargo.toml  README.md
crates/file-source/src/: file_source.rs  lib.rs  main.rs
crates/file-source/src/file_source/: local.rs  oci.rs  remote.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/examples/: hello-world.json
crates/runtime/src/: _runtime.rs  context.rs  lib.rs  main.rs  prototype.rs  runtime.rs  state.rs  task.rs
crates/runtime/src/runtime/: dependencies.rs  node_graph.rs
crates/workflow/: Cargo.toml  README.md
crates/workflow/src/: lib.rs  main.rs  workflow.rs
crates/workflow/src/workflow/: edge.rs  node.rs  types.rs
examples/: hello-world.json  http.json
