[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
async-stream = "0.3.6"
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.8.1"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
wasm-wave = "0.228.0"
wasmtime = { version = "32.0", features = ["wave"] }
wasmtime-wasi = "32.0"
wasmtime-wasi-http = "32.0"
