[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
async-stream.workspace = true
file-source = { path = "../file-source" }
petgraph.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
wasm-wave.workspace = true
wasmtime-wasi-http.workspace = true
wasmtime-wasi.workspace = true
wasmtime.workspace = true
workflow = { path = "../workflow" }

[target.'cfg(all())'.dependencies]
clap.workspace = true
tokio.workspace = true
